# NLP-Projects

Chatbot_Intro_LLM2Agent2MCPServer/: README.md  pyproject.toml
Chatbot_Intro_LLM2Agent2MCPServer/src/: my_MCP_server.py  system_tools.py  weather_tools.py
Chatbot_Intro_LLM2Agent2Tools/: README.md  pyproject.toml
Chatbot_Intro_LLM2Agent2Tools/data/: cat  catfish
Chatbot_Intro_LLM2Agent2Tools/src/: main-agent.py  tools.py
Chatbot_MCP_Web/: README.md
Chatbot_MCP_Web/uv/: pyproject.toml
Chatbot_MCP_Web/uv/data/: Refund_Policy.txt
Chatbot_MCP_Web/uv/src/prototype1_CLI/: agent.py  server.py
Chatbot_MCP_Web/uv/src/prototype2_WebIntegration/: agent.py  server.py
Chatbot_MCP_Web/web/app/Http/Controllers/: ChatController.php
Chatbot_MCP_Web/web/resources/views/: chat.blade.php
Chatbot_MCP_Web/web/routes/: web.php
Chatbot_RAG/: README.md  pyproject.toml
Chatbot_RAG/data/: FAQ.txt
Chatbot_RAG/src/: create_db.ipynb  main.ipynb  query_db.ipynb
Chatbot_RAG/src/chroma/: chroma.sqlite3
NLP_SentimentAnalysis_OnDrug/: README.md  pyproject.toml
NLP_SentimentAnalysis_OnDrug/src/: main.ipynb
NLP_SpamClassification/: README.md
