[project]
name = "chatbot-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "unstructured[md]>=0.18.15",
]