[project]
name = "chatbot-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "dotenv>=0.9.9",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-huggingface>=1.0.0",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "unstructured>=0.18.15",
]
